--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ ScaffoldingReadMe.txt
 ~$*
 *~
 CodeCoverage/
+.vs/UrlShorteningService/FileContentIndex/
 
 # MSBuild Binary and Structured Log
 *.binlog
